fix 'now on view' margins, fix bad line break in third exhibit, create article block

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,6 @@
 .gallery {
   display: grid;
+  margin-bottom: 24px;
 
   &--layout-2-1 {
     grid-template-columns: 130px 130px;
