--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -15,6 +15,11 @@
   font-size: 32px;
   line-height: 32px;
   letter-spacing: -1.5px;
+  margin-bottom: 8px;
+
+  &--center {
+    text-align: center;
+  }
 }
 
 .heading-3 {
@@ -57,6 +62,10 @@
     font-size: 16px;
     line-height: 27px;
     color: $dark-main;
+
+    &--center {
+      text-align: center;
+    }
   }
 
   &-sans {
